tests/expected_invalid_missing_permit_argument.diag.out
<input>:10:12: error: permit argument must be written as 'as name'
        submit(count)
               ^^^^^
